@@ -81,4 +81,4 @@ y^5 + 220*y^4 - 104*y^3 + 36*y^2 - 8*y + 1)]]]
 2
 0
 0
-Total time spent: 528
+Total time spent: 404
